Temporarily changed contact page to feedback form. Fixed navigation bar spacing on mobile. Other design stuff as well.

--- a/style/map.css
+++ b/style/map.css
@@ -49,6 +49,7 @@ body,
   width: var(--contentwidth);
   padding: 30px 30px;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 .sidepanel .closebtn {
